frontend/tests/cases/negative/simple/unbound.gr
foo : Int -> Int
foo 2 = ğŸŠ