frontend/tests/cases/negative/simple/unbound.gr.output
Type checking failed: 
Unbound variable error: frontend/tests/cases/negative/simple/unbound.gr:2:9:
`ğŸŠ`